--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h1 class="sub-title centered">Contact Me</h1>
                 <div class="details">
                     <p> <i class="fa-solid fa-envelope"></i> Umer.arshad101@gmail.com</p>
-                    <p> <i class="fa-solid fa-phone"></i> +923365017444</p>
+                    <p> <i class="fa-solid fa-phone"></i><a href="tel:+923365017444">+923365017444</a></p>
                 </div>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/umer-arshad-7816a4307" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
