--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="work-list">
                     <a href="https://github.com/Uarshad24/Image-Classification" target="_blank">
                         <div>
-                            <h2>Time Series Analysis</h2>
-                            <p> ABC </p>
+                            <h2>Global Temperature Analysis</h2>
+                            <p> Developed an LSTM model using TensorFlow to forecast global temperature trends, optimized hyperparameters to achieve a 20% reduction in validation mean squared error (0.08) compared to the baseline. Created an interactive dashboard to visualize temperature projections, highlighting a predicted 1.5°C rise by 2050. </p>
                         </div>
                     </a>
                     <a href="https://github.com/Uarshad24/Image-Classification" target="_blank">
