--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
                     </a>
                     <a href="https://github.com/Uarshad24/Image-Classification" target="_blank">
                         <div>
-                            <h2>Image Classification</h2>
-                            <p>Built a dataset for an image classifier by scraping car listings from Pakwheels using Selenium and BeautifulSoup. Collected 20,000 images, cleaned and filtered the data, and applied object detection with Roboflow to select relevant car images. Processed the images by cropping, resizing, and labeling for classification tasks.</p>
+                            <h2>Car Recognition Image Classifier</h2>
+                            <p> Developed an automated web scraper using Selenium and BeautifulSoup to extract car images and
+from Pakwheels.com, collecting over 40,000 raw images. Cleaned the dataset and created a data
+pipeline using TensorFlow to build and train an image classifier for car recognition. </p>
                         </div>
                     </a>
                     <a href="https://api.memegen.link/images/custom/Error 404: Project not found/This Project is under construction.jpg?background=https://i.imgur.com/CsCgN7Ll.png&width=400" target="_blank">
