--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me </h1>
-                        <p> ABC </p>
+                        <p> I’m passionate about diving into data—whether structured or unstructured—to uncover insights that empower businesses to make smarter decisions. What excites me most is taking raw numbers and uncovering the stories they tell. For me, it's not just about the data; it's about driving meaningful change and making a real impact for everyone. </p>
                         <div class="tab-titles" id="tabs">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('Certifications')">Certifications</p>
