--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                                 <li><span>Databases:</span> MySQL</li>
                                 <li><span>Libraries:</span> Numpy, Pandas, SkLearn, Pytorch, Tensorflow, Matplotlib</li>
                                 <li><span>Machine Learning:</span> Regression, Classification, Neural Networks (CNN, RNN, LSTM)</li>
-                                <li><span>Data Analysis :</span> Time Series Analysis, Predictive Analysis, Recommendation Systems</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="Certifications">
@@ -76,6 +75,8 @@
                         </div>
                     </div>
                 </div>
+                <p class="text"> SELECT * FROM UMER</p>
+                <a href="files/Resume.pdf" download class="btn"> Download CV </a>
             </div>
         </div>
 
