--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>Languages:</span> Python, SQL, C, JavaScript </li>
-                                <li><span>Databases:</span> MySQL</li>
-                                <li><span>Libraries:</span> Numpy, Pandas, SkLearn, Pytorch, Tensorflow, Matplotlib</li>
+                                <li><span>Databases:</span> MySQL, SQLite</li>
+                                <li><span>Libraries:</span> Numpy, Pandas, SkLearn, Pytorch, Tensorflow, Matplotlib, Plotly, Flask</li>
                                 <li><span>Machine Learning:</span> Regression, Classification, Neural Networks (CNN, RNN, LSTM)</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="Certifications">
                             <ul>
                                 <li><span>Google:</span> Advanced Data Analytics Professional Certificate</li>
-                                <li><span>Stanford University & DeepLearning.AI:</span> Machine Learning Specialization</li>
+                                <li><span>Stanford University & DeepLearning.AI:</span> Machine Learning Specialization, Deep Learning Specialization</li>
                                 <li><span>HarvardX:</span> CS50's Introduction to Computer Science</li>
                                 <li><span>University of Michigan:</span> Python Specialization</li>
                                 <li><span>UC Davis:</span> SQL for Data Science</li>
