--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="https://api.memegen.link/images/custom/Error 404: / Photo not found.jpg?background=https://i.imgur.com/CsCgN7Ll.png&width=400">
+                        <img src="images/DisplayPhoto.jpg">
                         <!-- <img src="images/Background.jpeg"> -->
                     </div>
                     <div class="about-col-2">
