--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/DisplayPhoto.jpg">
+                        <img src="images/Display.png">
                         <!-- <img src="images/Background.jpeg"> -->
                     </div>
                     <div class="about-col-2">
