--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ from Pakwheels.com, collecting over 40,000 raw images. Cleaned the dataset and c
 pipeline using TensorFlow to build and train an image classifier for car recognition. </p>
                         </div>
                     </a>
-                    <a href="https://api.memegen.link/images/custom/Error 404: Project not found/This Project is under construction.jpg?background=https://i.imgur.com/CsCgN7Ll.png&width=400" target="_blank">
+                    <a href="https://github.com/Uarshad24/Recommender-systems" target="_blank">
                         <div>
                             <h2>Recommendation Systems</h2>
                             <p> Designed and implemented a course recommender system. Developed content-based recommender systems using NLP techniques such as Bag of Words and cosine similarity to quantify course relevance. Developed collaborative filtering-based recommender system using KNN and predicted course ratings using neural networks. </p>
