--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <ul>
                                 <li><span>Google:</span> Advanced Data Analytics Professional Certificate</li>
                                 <li><span>Stanford University & DeepLearning.AI:</span> Machine Learning Specialization, Deep Learning Specialization</li>
-                                <li> <a href="images/HarvardX CS50x Certificate _ edX.pdf" target="_blank"> <span>HarvardX:</span> CS50's Introduction to Computer Science </a></li>
+                                <li> <a href="Images/HarvardX CS50x Certificate _ edX.pdf" target="_blank"> <span>HarvardX:</span> CS50's Introduction to Computer Science </a></li>
                                 <li><span>University of Michigan:</span> Python Specialization</li>
                                 <li><span>UC Davis:</span> SQL for Data Science</li>
                             </ul>
