--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <li><span>Google:</span> Advanced Data Analytics Professional Certificate</li>
                                 <li><span>Stanford University & DeepLearning.AI:<a href="files/Coursera ML Specialization.pdf" target="_blank"></span> Machine Learning Specialization</a>, Deep Learning Specialization</li>
                                 <li> <a href="files/HarvardX CS50x Certificate _ edX.pdf" target="_blank"> <span>HarvardX:</span> CS50's Introduction to Computer Science </a></li>
-                                <li><span>University of Michigan:</span> Python Specialization</li>
+                                <li><a href="files/Coursera ML Specialization.pdf" target="_blank"><span>University of Michigan:</span> Python Specialization</a></li>
                                 <li><span>UC Davis:</span> SQL for Data Science</li>
                             </ul>
                         </div>
